Fix Jamendo config and search