@@ -16,6 +16,7 @@ import static org.springframework.http.HttpStatus.BAD_REQUEST;
 
 @Service
 public class MusicService {
+
     private final RestClient restClient;
     private final AppProperties appProperties;
     private final DiscogsService discogsService;
@@ -28,29 +29,32 @@ public class MusicService {
 
     public List<TrackDto> searchTracks(String query) {
         if (!StringUtils.hasText(appProperties.getJamendoClientId())) {
-            throw new ResponseStatusException(BAD_REQUEST, "Configura JAMENDO_CLIENT_ID nel backend/.env");
+            throw new ResponseStatusException(BAD_REQUEST, "Configura JAMENDO_CLIENT_ID nel backend");
         }
+
         if (!StringUtils.hasText(query)) {
             return List.of();
         }
 
-        Map<String, Object> response = restClient.get()
-                .uri(uriBuilder -> uriBuilder
-                        .scheme("https")
-                        .host("api.jamendo.com")
-                        .path("/v3.0/tracks")
-                        .queryParam("client_id", appProperties.getJamendoClientId())
-                        .queryParam("format", "json")
-                        .queryParam("limit", 20)
-                        .queryParam("audioformat", "mp32")
-                        .queryParam("include", "musicinfo licenses")
-                        .queryParam("search", query)
-                        .build())
-                .accept(MediaType.APPLICATION_JSON)
-                .retrieve()
-                .body(Map.class);
+        Map<?, ?> response = restClient.get()
+            .uri(uriBuilder -> uriBuilder
+                .scheme("https")
+                .host("api.jamendo.com")
+                .path("/v3.0/tracks")
+                .queryParam("client_id", appProperties.getJamendoClientId())
+                .queryParam("format", "json")
+                .queryParam("limit", 20)
+                .queryParam("audioformat", "mp32")
+                .queryParam("include", "musicinfo licenses")
+                .queryParam("namesearch", query)
+                .build())
+            .accept(MediaType.APPLICATION_JSON)
+            .retrieve()
+            .body(Map.class);
 
+        @SuppressWarnings("unchecked")
         List<Map<String, Object>> results = (List<Map<String, Object>>) response.get("results");
+
         List<TrackDto> tracks = new ArrayList<>();
         if (results == null) {
             return tracks;
@@ -59,6 +63,7 @@ public class MusicService {
         for (Map<String, Object> item : results) {
             String artist = getString(item, "artist_name");
             String title = getString(item, "name");
+
             DiscogsService.DiscogsMatch match = discogsService.searchBestMatch(artist, title);
 
             String cover = getString(item, "album_image");
@@ -66,43 +71,46 @@ public class MusicService {
                 cover = match.getCoverUrl();
             }
 
-            Map<String, Object> license = (Map<String, Object>) item.get("license_ccurl");
-            String licenseName = null;
-            if (license != null) {
-                licenseName = license.toString();
-            }
+            Object license = item.get("license_ccurl");
+            String licenseName = license == null ? null : license.toString();
 
             tracks.add(TrackDto.builder()
-                    .id(getString(item, "id"))
-                    .title(title)
-                    .artist(artist)
-                    .album(getString(item, "album_name"))
-                    .audioUrl(getString(item, "audio"))
-                    .coverUrl(cover)
-                    .durationSeconds(getInteger(item.get("duration")))
-                    .source("JAMENDO")
-                    .genre(match != null ? match.getGenre() : extractJamendoGenre(item))
-                    .releaseYear(match != null ? match.getYear() : null)
-                    .licenseName(licenseName)
-                    .discogsUri(match != null ? match.getUri() : null)
-                    .build());
+                .id(getString(item, "id"))
+                .title(title)
+                .artist(artist)
+                .album(getString(item, "album_name"))
+                .audioUrl(getString(item, "audio"))
+                .coverUrl(cover)
+                .durationSeconds(getInteger(item.get("duration")))
+                .source("JAMENDO")
+                .genre(match != null ? match.getGenre() : extractJamendoGenre(item))
+                .releaseYear(match != null ? match.getYear() : null)
+                .licenseName(licenseName)
+                .discogsUri(match != null ? match.getUri() : null)
+                .build());
         }
+
         return tracks;
     }
 
+    @SuppressWarnings("unchecked")
     private String extractJamendoGenre(Map<String, Object> item) {
-        Map<String, Object> musicInfo = (Map<String, Object>) item.get("musicinfo");
-        if (musicInfo == null) {
+        Object musicInfoObj = item.get("musicinfo");
+        if (!(musicInfoObj instanceof Map<?, ?> musicInfo)) {
             return null;
         }
-        Map<String, Object> tags = (Map<String, Object>) musicInfo.get("tags");
-        if (tags == null) {
+
+        Object tagsObj = musicInfo.get("tags");
+        if (!(tagsObj instanceof Map<?, ?> tags)) {
             return null;
         }
-        Object genres = tags.get("genres");
-        if (genres instanceof List<?> list && !list.isEmpty()) {
-            return list.getFirst().toString();
+
+        Object genresObj = tags.get("genres");
+        if (genresObj instanceof List<?> genres && !genres.isEmpty()) {
+            Object first = genres.get(0);
+            return first == null ? null : first.toString();
         }
+
         return null;
     }
 
